--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html'%}
 
 {% block content %}
-    {% for post in object_list %}
+    {% for post in posts %}
         <div class="post">
             <div class="date">
                 <p>published: {{ post.published_date }}</p>
