--- a/main/templates/main/post_draft_list.html
+++ b/main/templates/main/post_draft_list.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-    {% for post in object_list %}
+    {% for post in posts %}
         <div class="post">
             <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
